--- a/style4.css
+++ b/style4.css
@@ -8,7 +8,11 @@
     margin: 0;
 }
 
-form {
+#form1,
+#form2,
+#form3,
+#form4,
+#form5 {
     width: 60%;
     height: auto;
     border: 4px solid limegreen;
@@ -36,4 +40,15 @@ h2 {
 
 input[type=radio] {
     size: 30;
+}
+
+button[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    margin: 10px;
 }
