--- a/style4.css
+++ b/style4.css
@@ -2,21 +2,18 @@
     box-sizing: border-box;
 }
 
-#main {
+body {
     background-image: url("./image4.jpg");
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
+    height: 100%;
 }
 
-#form1,
-#form2,
-#form3,
-#form4,
-#form5 {
-    width: 60%;
-    height: auto;
+#form1 {
+    width: 40%;
+    height: 100%;
     border: 4px solid limegreen;
-    margin-left: 20%;
+    margin-left: 30%;
     padding-left: 50px;
     border-radius: 50px;
     background-color: whitesmoke;
@@ -25,21 +22,45 @@
 
 h1 {
     padding-top: 40px;
-    font-size: 50px;
+    font-size: 5vw;
     text-align: center;
+    font-weight: 700;
 }
 
 h2 {
     text-align: center;
-    font-size: 15px;
+    font-size: 2vw;
+    margin-left: 35%;
+    margin-right: 35%;
+    border-radius: 5px;
 }
 
 #form1 p {
-    font-size: 40px;
+    font-size: 30px;
 }
 
 input[type=radio] {
-    size: 30;
+    size: 50;
+}
+
+.correctOption {
+    width: 80%;
+    border-radius: 8px;
+    background-color: green;
+    padding: 5px;
+}
+
+.selectedOption {
+    width: 80%;
+    border-radius: 8px;
+    padding: 5px;
+}
+
+.wrongOption {
+    width: 80%;
+    border-radius: 8px;
+    background-color: red;
+    padding: 5px;
 }
 
 button[type=submit] {
@@ -51,4 +72,22 @@ button[type=submit] {
     cursor: pointer;
     text-align: center;
     margin: 10px;
+}
+
+button[type=return] {
+    background-color: blue;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    margin: 10px;
+}
+
+@media screen and (max-width: 800px) {
+    body,
+    #form1 {
+        width: 100%;
+    }
 }
