--- a/style4.css
+++ b/style4.css
@@ -14,7 +14,7 @@ body {
     height: 100%;
     border: 4px solid limegreen;
     margin-left: 30%;
-    padding-left: 50px;
+    padding: 0 20px;
     border-radius: 50px;
     background-color: whitesmoke;
     font-size: 30px;
@@ -22,14 +22,14 @@ body {
 
 h1 {
     padding-top: 40px;
-    font-size: 5vw;
+    font-size: 4vw;
     text-align: center;
     font-weight: 700;
 }
 
 h2 {
     text-align: center;
-    font-size: 2vw;
+    font-size: vw;
     margin-left: 35%;
     margin-right: 35%;
     border-radius: 5px;
@@ -44,20 +44,15 @@ input[type=radio] {
 }
 
 .correctOption {
-    width: 80%;
+    width: 90%;
     border-radius: 8px;
-    background-color: green;
-    padding: 5px;
-}
-
-.selectedOption {
-    width: 80%;
-    border-radius: 8px;
+    border: 2px solid green;
+    background-color: lightgreen;
     padding: 5px;
 }
 
 .wrongOption {
-    width: 80%;
+    width: 90%;
     border-radius: 8px;
     background-color: red;
     padding: 5px;
@@ -89,6 +84,6 @@ button[type=return] {
     body,
     #form1 {
         width: 100%;
-        margin:0;
+        margin: 0;
     }
 }
