--- a/style4.css
+++ b/style4.css
@@ -29,7 +29,7 @@ h1 {
 
 h2 {
     text-align: center;
-    font-size: vw;
+    font-size: 2vw;
     margin-left: 35%;
     margin-right: 35%;
     border-radius: 5px;
