--- a/style4.css
+++ b/style4.css
@@ -14,7 +14,7 @@ body {
     height: 100%;
     border: 4px solid limegreen;
     margin-left: 30%;
-    padding: 0 20px;
+    padding: 0 50px;
     border-radius: 50px;
     background-color: whitesmoke;
     font-size: 30px;
@@ -22,14 +22,14 @@ body {
 
 h1 {
     padding-top: 40px;
-    font-size: 4vw;
+    font-size: 5vw;
     text-align: center;
     font-weight: 700;
 }
 
 h2 {
     text-align: center;
-    font-size: 2vw;
+    font-size: 3vw;
     margin-left: 35%;
     margin-right: 35%;
     border-radius: 5px;
@@ -41,21 +41,41 @@ h2 {
 
 input[type=radio] {
     size: 50;
+    margin-right: 20px;
 }
 
 .correctOption {
-    width: 90%;
+    width: 100%;
     border-radius: 8px;
     border: 2px solid green;
     background-color: lightgreen;
     padding: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.selectedOption {
+    width: 80%;
+    border-radius: 8px;
+    padding: 5px;
 }
 
 .wrongOption {
-    width: 90%;
+    width: 100%;
     border-radius: 8px;
-    background-color: red;
+    border: 2px solid red;
+    background-color: pink;
     padding: 5px;
+    display: flex;
+    align-items: center;
+}
+
+.options {
+    margin-top: 5px;
+    width: 100%;
+    padding: 5px;
+    display: flex;
+    align-items: center;
 }
 
 button[type=submit] {
