--- a/style4.css
+++ b/style4.css
@@ -103,7 +103,7 @@ button[type=return] {
 @media screen and (max-width: 800px) {
     body,
     #form1 {
-        width: 80%;
-        margin: 0;
+        width: 100%;
+        margin: 2%;
     }
 }
